Fix the hero header alignment for resizing windows

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,11 @@
+body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 .header,
 .head2,
-.right-links {
+.right-links,
+ {
     border: 2px solid pink;
 }
 
@@ -8,6 +13,18 @@
 .head2 {
     display: flex;
     justify-content: space-around;
+    background-color: #1f2937;
+}
+
+.main,
+.logo {
+    color: #f9faf8;
+}
+
+.right-links,
+.text {
+    font-size: 18px;
+    color: #e5e7eb;
 }
 
 .header {
@@ -25,16 +42,30 @@
 }
 
 .head2 {
-    padding: 50px 140px
- }
+    padding: 80px 150px;
+}
 
 .hero {
-    width: 350px;
-    height: 200px;
-    padding-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+    width: 450px;
 }
 
 .main {
     font-size: 48px;
     font-weight: bolder;
+    margin-bottom: 5px;
+}
+
+.text {
+    margin-bottom: 10px;
+}
+button {
+    width: 90px;
+    height: 30px;
+    font-weight: bold;
+    color: #f9faf8;
+    background-color: #3882f6;
+    border-radius: 10%;
+    border-style: none;
 }
